syntax = "proto3";

package com.example.internalapi.request.author.get_all.proto;

option java_multiple_files = true;

import "com/example/internalapi/model/author.proto";

message GetAllAuthorsRequest {

}

message GetAllAuthorsResponse {
  oneof response {
    Success success = 1;
  }

  message Success {
    example.internalapi.model.AuthorList authors = 1;
  }
}
