syntax = "proto3";

package com.example.internalapi;

import "com/example/internalapi/input/reqreply/author/create.proto";
import "com/example/internalapi/input/reqreply/author/get_all.proto";
import "com/example/internalapi/input/reqreply/author/get_by_id.proto";
import "com/example/internalapi/input/reqreply/author/update.proto";

service AuthorService {
  rpc createAuthor(com.example.internalapi.request.author.create.proto.CreateAuthorRequest)
      returns (com.example.internalapi.request.author.create.proto.CreateAuthorResponse);

  rpc getAllAuthors(com.example.internalapi.request.author.get_all.proto.GetAllAuthorsRequest)
      returns (com.example.internalapi.request.author.get_all.proto.GetAllAuthorsResponse);

  rpc getAuthorById(com.example.internalapi.request.author.get_by_id.proto.GetAuthorByIdRequest)
      returns (com.example.internalapi.request.author.get_by_id.proto.GetAuthorByIdResponse);

  rpc updateAuthor(com.example.internalapi.request.author.update.proto.UpdateAuthorRequest)
      returns (com.example.internalapi.request.author.update.proto.UpdateAuthorResponse);
}
